Fixed letter-spacing on headers.

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -105,7 +105,7 @@ a {
     line-height: 1.2em;
     text-align: center;
     text-transform: uppercase;
-    letter-spacing: 0.075em;
+    letter-spacing: 0.05em;
 }
 
 .content h1 a {
